--- a/styles.css
+++ b/styles.css
@@ -324,7 +324,7 @@ footer {
 .header {
   width: 100%;
   height: auto;
-  min-height: 14rem;
+  min-height: clamp(18rem, 30vh, 37rem);
 }
 
 .main-title {
@@ -2002,6 +2002,10 @@ button.submit-button:hover {
 }
 
 @media (max-width: 768px) {
+  header {
+    min-height: 37rem;
+  }
+
   .nav-logo {
     height: calc(200px / 2.38);
     aspect-ratio: 2.38;
@@ -2390,6 +2394,10 @@ button.submit-button:hover {
 }
 
 @media (max-width: 480px) {
+  header {
+    min-height: 26.6rem;
+  }
+
   #projects {
     width: 90%;
     max-width: 90vw;
