--- a/styles.css
+++ b/styles.css
@@ -2002,7 +2002,7 @@ button.submit-button:hover {
 }
 
 @media (max-width: 768px) {
-  header {
+  .header {
     min-height: 37rem;
   }
 
@@ -2394,7 +2394,7 @@ button.submit-button:hover {
 }
 
 @media (max-width: 480px) {
-  header {
+  .header {
     min-height: 26.6rem;
   }
 
