--- a/styles.css
+++ b/styles.css
@@ -321,7 +321,7 @@ footer {
 
 /* home page */
 
-.header {
+header {
   width: 100%;
   height: auto;
   min-height: clamp(18rem, 30vh, 37rem);
@@ -2002,7 +2002,7 @@ button.submit-button:hover {
 }
 
 @media (max-width: 768px) {
-  .header {
+  header {
     min-height: 37rem;
   }
 
@@ -2394,7 +2394,7 @@ button.submit-button:hover {
 }
 
 @media (max-width: 480px) {
-  .header {
+  header {
     min-height: 26.6rem;
   }
 
