--- a/styles.css
+++ b/styles.css
@@ -522,8 +522,9 @@ footer {
 
 header {
   width: 100%;
+  max-width: 100vw;
   height: auto;
-  min-height: clamp(5rem, 5vh, 8rem);
+  min-height: clamp(3rem, 5rem, 6rem);
 }
 
 .canvas-skills-grid {
@@ -607,10 +608,11 @@ img[fetchpriority="high"] {
 .about-me {
   margin: 0 auto;
   max-width: 50vw;
+  width: 50%;
   position: relative;
   padding-bottom: 10rem;
   height: auto;
-  min-height: 20rem;
+  min-height: 50rem;
 }
 
 .skills-main {
@@ -630,6 +632,7 @@ img[fetchpriority="high"] {
   justify-content: center;
   background-color: black;
   width: 100%;
+  max-width: 100vw;
   height: auto;
   min-height: 10rem;
   margin: 1em auto 0;
@@ -643,6 +646,7 @@ img[fetchpriority="high"] {
 
 .main-container {
   width: 100%;
+  max-width: 100vw;
   height: auto;
   min-height: 10rem;
 }
@@ -1097,6 +1101,7 @@ img[fetchpriority="high"] {
 
 #description {
   width: 100%;
+  max-width: 100vw;
   height: auto;
   min-height: 6rem;
 }
@@ -1672,12 +1677,15 @@ button.submit-button:hover {
 }
 
 .mood-board,
-.pagespeed-grade-title,
 .grade-text,
 .grade-title {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: auto;
+  min-height: 5rem;
+  width: 100%;
+  max-width: 100vw;
 }
 
 .mood-board h3,
@@ -1688,6 +1696,7 @@ button.submit-button:hover {
   min-height: 1.7rem;
   width: 100%;
   color: black;
+  margin: 0 auto;
 }
 
 
@@ -1723,19 +1732,16 @@ button.submit-button:hover {
 
 .pagespeed-grade-title,
 .grade-title {
-  width: 100%;
-  max-width: 100%;
+  width: 90%;
+  max-width: 90vw;
   height: auto;
+  min-height: 2rem;
   padding: 0.625em;
   background-color: white;
 }
 
 .pagespeed-grade-title {
-  margin: 3em auto 0;
-}
-
-.pagespeed-grade-title {
-  margin: 1em 0.5em;
+  margin: 1em auto;
 }
 
 .pagespeed-container {
@@ -1784,7 +1790,8 @@ button.submit-button:hover {
 .pagespeed-container {
   width: 100%;
   height: auto;
-  max-width: 100%;
+  max-width: 100vw;
+  min-height: 10rem;
 }
 
 .cta-section,
@@ -1803,6 +1810,7 @@ button.submit-button:hover {
 .author-bio {
   background-color: black;
   color: #0BD6E2;
+  min-height: 10rem;
 }
 
 .author-bio img {
@@ -2018,6 +2026,14 @@ button.submit-button:hover {
   margin: 0 auto;
   aspect-ratio: inherit;
   padding: 0.2em 1em;
+}
+
+.wireframe-img {
+  min-height: 20rem;
+}
+
+.site-hero-img {
+  min-height: 5rem;
 }
 
 
@@ -2294,6 +2310,13 @@ button.submit-button:hover {
     font-size: 1rem;
   }
 
+  .design {
+    height: auto;
+    min-height: 65rem;
+    width: 100%;
+    max-width: 100vw;
+  }
+
   .designer-box,
   .coder-box,
   .coder-container,
@@ -2379,8 +2402,9 @@ button.submit-button:hover {
 
   .resume-border {
     width: 95%;
+    max-width: 95%;
     height: auto;
-    min-height: 5rem;
+    min-height: 20rem;
   }
 
   .takeme-text {
