--- a/styles.css
+++ b/styles.css
@@ -2349,6 +2349,7 @@ main#projects.about-me {
     aspect-ratio: 1.79 / 1;
     border: 1em solid black;
     min-height: clamp(17rem, 50vh, 35.75rem);
+    contain: layout paint;
   }
 
   .canvas-skills-img img {
@@ -2392,6 +2393,9 @@ main#projects.about-me {
   #projects {
     width: 85%;
     max-width: 85vw;
+    height: auto;
+    min-height: 100vh;
+    contain: layout;
   }
 
 
@@ -2788,12 +2792,6 @@ main#projects.about-me {
   }
 
   .about-me {
-    min-height: clamp(8rem, 17vh, 30rem);
-    contain: layout;
-    overflow: hidden;
-  }
-
-  .about-me {
     margin: 0 auto;
     max-width: 90vw;
     width: 90%;
@@ -2831,8 +2829,8 @@ main#projects.about-me {
     max-width: 100vw;
     aspect-ratio: 1.79 / 1;
     border-bottom: 1em solid black;
-    border-left: .2em solid black;
-    border-right: .2em solid black;
+    border-left: 0.2em solid black;
+    border-right: 0.2em solid black;
   }
 
   .canvas-skills-img img {
@@ -2840,6 +2838,8 @@ main#projects.about-me {
     width: 100%;
     height: auto;
     aspect-ratio: inherit;
+    object-fit: cover;
+    /* <-- ADD THIS */
   }
 
   .canvas-skills-title {
