--- a/styles.css
+++ b/styles.css
@@ -603,18 +603,10 @@ footer {
   transform: translateY(0);
 }
 
-.header {
-  min-height: clamp(17rem, 50vh, 35rem);
-  aspect-ratio: 5.39 / 1;
-  contain: layout paint;
-  overflow: hidden;
-
-}
-
 .canvas-skills-grid {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  min-height: clamp(300px, 40vh, 500px);
+  min-height: clamp(16.5rem, 35vh, 38rem);
   width: 100%;
   max-width: 100vw;
   height: auto;
@@ -664,7 +656,7 @@ img[fetchpriority="high"] {
   max-width: 100vw;
   width: 100%;
   margin: 0 auto;
-  min-height: clamp(13rem, 28vh, 17.3125rem);
+  min-height: clamp(8rem, 20vh, 17rem);
 }
 
 .canvas-skills-title h1 {
@@ -2299,9 +2291,6 @@ main#projects.about-me {
 }
 
 @media (max-width: 768px) {
-  .header {
-    aspect-ratio: 1.27 / 1;
-  }
 
   .nav-logo {
     height: calc(200px / 2.38);
@@ -2323,16 +2312,8 @@ main#projects.about-me {
     display: none;
   }
 
-  header {
+  head {
     min-height: 1.2rem;
-  }
-
-  .header {
-    aspect-ratio: 1.18 / 1;
-    height: auto;
-    min-height: clamp(20rem, 45vh, 26rem);
-    contain: layout paint;
-    overflow: hidden;
   }
 
   .canvas-skills-grid {
@@ -2799,14 +2780,6 @@ main#projects.about-me {
     opacity: 1 !important;
   }
 
-  .header {
-    aspect-ratio: 1.18 / 1;
-    height: auto;
-    min-height: clamp(5rem, 13rem, 18rem);
-    contain: layout paint;
-    overflow: hidden;
-  }
-
   .about-me {
     margin: 0 auto;
     max-width: 90vw;
@@ -2847,13 +2820,11 @@ main#projects.about-me {
   }
 
   .canvas-skills-img {
-    display: flex;
-    flex-direction: column;
+    aspect-ratio: 1.79 / 1;
+    object-fit: cover;
+    display: block;
     width: 100%;
     height: auto;
-    min-height: 15.375rem;
-    max-width: 100vw;
-    aspect-ratio: 1.79 / 1;
     border-bottom: 1em solid black;
     border-left: 0.2em solid black;
     border-right: 0.2em solid black;
@@ -2870,10 +2841,10 @@ main#projects.about-me {
   .canvas-skills-title {
     width: 90%;
     max-width: 90vw;
-    min-height: 5rem;
-    padding-top: 0.5rem;
-    height: auto;
-    margin: 0.5em auto;
+    margin: 0.25em 0;
+    transition: none !important;
+    opacity: 1 !important;
+    visibility: visible !important;
     border-top: 0.5em solid black;
   }
 
@@ -2905,10 +2876,6 @@ main#projects.about-me {
   body.fonts-loaded .canvas-skills-title h1,
   body.fonts-loaded .canvas-skills-title h2 {
     transition: none;
-  }
-
-  .canvas-skills-grid {
-    min-height: 12rem;
   }
 
   #projects {
