--- a/styles.css
+++ b/styles.css
@@ -603,34 +603,34 @@ footer {
 
 .canvas-skills-grid {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  min-height: clamp(16.5rem, 35vh, 38rem);
+  grid-template-columns: 2fr 3fr;
+  align-items: stretch;
   width: 100%;
   max-width: 100vw;
-  height: auto;
   gap: 0;
+  height: auto;
+  min-height: clamp(15.6rem, 22.18rem, 35.6rem);
 }
 
 .canvas-skills-img {
-  border-bottom: 0.5em solid black;
-  border-left: .3em solid black;
-  border-right: .3em solid black;
+  border-top: 1em solid black;
+  border-bottom: 1em solid black;
+  border-left: 1em solid black;
+  border-right: 0.5em solid black;
   height: auto;
   max-width: 100vw;
   width: 100%;
   margin: 0 auto;
-  min-height: clamp(16.5rem, 35vh, 38rem);
-  aspect-ratio: 1.7726 / 1;
+  min-height: unset;
   object-fit: cover;
 }
 
 .canvas-skills-img img {
-  display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
+  display: block;
   content: layout paint;
-  aspect-ratio: inherit;
 }
 
 img[fetchpriority="high"] {
@@ -644,12 +644,15 @@ img[fetchpriority="high"] {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1em solid black;
+  border-top: 1em solid black;
+  border-bottom: 1em solid black;
+  border-left: 0.5em solid black;
+  border-right: 1em solid black;
   height: auto;
   max-width: 100vw;
   width: 100%;
   margin: 0 auto;
-  min-height: clamp(13rem, 35vh, 38rem);
+  min-height: unset;
 }
 
 .canvas-skills-title h1 {
@@ -1304,7 +1307,7 @@ main#projects.about-me {
   right: 1rem;
   width: auto;
   min-width: 6rem;
-  min-height: 10rem;
+  min-height: 16.4rem;
   contain: layout;
 }
 
@@ -1436,8 +1439,7 @@ main#projects.about-me {
 .skills-text:active {
   color: white;
   font-size: clamp(1.2rem, 2.3vw, 1.7rem);
-  text-shadow:
-    0.5em 0.5em 1em rgba(11, 214, 226, 0.8),
+  text-shadow: 0.5em 0.5em 1em rgba(11, 214, 226, 0.8),
     0.125em 0.125em 0.5em rgba(11, 214, 226, 0.6),
     0.375em 0.375em 1.25em rgba(11, 214, 226, 0.4);
 }
@@ -2332,7 +2334,7 @@ main#projects.about-me {
     height: auto;
     align-items: center;
     justify-content: space-between;
-    min-height: clamp(300px, 40vh, 500px);
+    min-height: clamp(29.75, 31.34rem, 660px);
   }
 
   .canvas-skills-img {
@@ -2828,11 +2830,11 @@ main#projects.about-me {
   }
 
   .canvas-skills-img {
-    min-height: 246px;
-    aspect-ratio: 442 / 246;
+    min-height: 14.75rem;
     object-fit: cover;
     display: block;
     width: 100%;
+    max-width: 100vw;
     height: auto;
     border-bottom: 1em solid black;
     border-left: 0.2em solid black;
@@ -2842,7 +2844,7 @@ main#projects.about-me {
   .canvas-skills-img img {
     width: 100%;
     height: auto;
-    aspect-ratio: 442 / 246;
+    aspect-ratio: inherit;
     object-fit: cover;
     display: block;
   }
@@ -2861,7 +2863,7 @@ main#projects.about-me {
   .canvas-skills-title h1 {
     font-size: 2.2rem;
     padding: 0.2em 0 0.2em;
-    min-height: 3.5rem;
+    min-height: 2.64rem;
     height: auto;
   }
 
@@ -2890,12 +2892,13 @@ main#projects.about-me {
   }
 
   .canvas-skills-grid {
-    min-height: 27.9rem;
+    min-height: 28.75rem;
     height: auto;
   }
 
   #projects {
     width: 90%;
+    height: auto;
     max-width: 90vw;
   }
 
