--- a/styles.css
+++ b/styles.css
@@ -2338,15 +2338,12 @@ main#projects.about-me {
   }
 
   .canvas-skills-img {
+    object-fit: cover;
+    display: block;
     width: 100%;
-    height: auto;
-    min-height: 5rem;
     max-width: 100vw;
-    margin-bottom: 1rem;
-    background-color: black;
-    aspect-ratio: 1.79 / 1;
-    border: 1em solid black;
-    min-height: clamp(17rem, 50vh, 35.75rem);
+    height: auto;
+    min-height: clamp(16.375rem, 17.125rem, 26.56rem);
     contain: layout paint;
   }
 
@@ -2354,6 +2351,7 @@ main#projects.about-me {
     width: 100%;
     height: auto;
     aspect-ratio: inherit;
+    border: 0.2em solid black;
   }
 
   .canvas-skills-title {
@@ -2369,14 +2367,14 @@ main#projects.about-me {
     font-size: clamp(1.5rem, 4vw, 3rem);
     padding: 1em 0 0;
     height: auto;
-    min-height: 2.5rem;
+    min-height: clamp(1.75rem, 2rem, 2.30rem);
   }
 
   .canvas-skills-title h2 {
     font-size: clamp(1.125rem, 3vw, 3.5rem);
     padding: 0.4em 0 1em;
     height: auto;
-    min-height: 1.5rem;
+    min-height: clamp(1rem, 1.34, 1.68rem);
   }
 
   .mood-board,
@@ -2776,7 +2774,7 @@ main#projects.about-me {
   }
 
   .side-nav {
-    min-height: 10rem;
+    min-height: 17.5rem;
   }
 
 }
@@ -2830,13 +2828,13 @@ main#projects.about-me {
   }
 
   .canvas-skills-img {
-    min-height: 14.75rem;
+    min-height: 16.92rem;
     object-fit: cover;
     display: block;
     width: 100%;
     max-width: 100vw;
-    height: auto;
-    border-bottom: 1em solid black;
+    height: 16.92rem;
+    border-bottom: .2em solid black;
     border-left: 0.2em solid black;
     border-right: 0.2em solid black;
   }
