--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,6 @@ body.fonts-loaded h2 {
 .canvas-skills-title h1,
 .canvas-skills-title h2 {
   font-family: Georgia, serif;
-  font-size: clamp(3.5rem, 4vw, 4rem);
   font-weight: 400;
   line-height: 1.2;
   height: auto;
@@ -82,6 +81,20 @@ body.fonts-loaded h2 {
   visibility: hidden;
   opacity: 1;
   transition: none;
+}
+
+.canvas-skills-title {
+  min-height: 6.79rem;
+}
+
+.canvas-skills-title h1 {
+  font-size: clamp(2rem, 3rem, 4rem);
+  min-height: 3.59rem;
+}
+
+.canvas-skills-title h2 {
+  font-size: clamp(1.8rem, 2.5rem, 4rem);
+  min-height: 3.2rem;
 }
 
 body:not(.fonts-loaded) h2 {
@@ -609,7 +622,7 @@ footer {
   max-width: 100vw;
   gap: 0;
   height: auto;
-  min-height: clamp(15.6rem, 22.18rem, 35.6rem);
+  min-height: clamp(22.125rem, 22.18rem, 35.6rem);
 }
 
 .canvas-skills-img {
@@ -660,7 +673,6 @@ img[fetchpriority="high"] {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  font-size: clamp(3.5rem, 4vw, 4rem);
   padding: 0;
   line-height: 1.2;
   height: auto;
@@ -2334,7 +2346,7 @@ main#projects.about-me {
     height: auto;
     align-items: center;
     justify-content: space-between;
-    min-height: clamp(29.75, 31.34rem, 660px);
+    min-height: clamp(39.375rem, 40.4375rem, 45.93m);
   }
 
   .canvas-skills-img {
@@ -2360,21 +2372,19 @@ main#projects.about-me {
     height: auto;
     margin: 0.5em auto;
     border: 0.8em solid black;
-    min-height: clamp(10rem, 23vh, 17rem);
+    min-height: 19.875rem;
   }
 
   .canvas-skills-title h1 {
-    font-size: clamp(1.5rem, 4vw, 3rem);
     padding: 1em 0 0;
     height: auto;
-    min-height: clamp(1.75rem, 2rem, 2.30rem);
+    min-height: clamp(5.20rem, 6.56rem, 10.18rem);
   }
 
   .canvas-skills-title h2 {
-    font-size: clamp(1.125rem, 3vw, 3.5rem);
     padding: 0.4em 0 1em;
     height: auto;
-    min-height: clamp(1rem, 1.34, 1.68rem);
+    min-height: 5.18rem;
   }
 
   .mood-board,
@@ -2859,7 +2869,6 @@ main#projects.about-me {
   }
 
   .canvas-skills-title h1 {
-    font-size: 2.2rem;
     padding: 0.2em 0 0.2em;
     min-height: 2.64rem;
     height: auto;
