changed height, width, preload links for hero img

--- a/styles.css
+++ b/styles.css
@@ -622,7 +622,7 @@ footer {
   max-width: 100vw;
   gap: 0;
   height: auto;
-  min-height: clamp(22.125rem, 22.18rem, 35.6rem);
+  min-height: clamp(22.125rem, 22.3125rem, 35.9rem);
 }
 
 .canvas-skills-img {
@@ -1989,7 +1989,6 @@ main#projects.about-me {
 
 .casestudy {
   height: auto;
-  min-height: 100vh;
   contain: layout;
   overflow: hidden;
 }
@@ -2292,7 +2291,7 @@ main#projects.about-me {
 
   .canvas-skills-grid {
     grid-template-columns: 2fr 2fr;
-    min-height: clamp(10rem, 25vh, 25rem);
+    min-height: clamp(10rem, 15.375rem, 22.3125);
     width: 100%;
     max-width: 100vw;
     height: auto;
